test/trivial/bradc/vardecls1a.good
vardecls1a.chpl:8: In function 'bar':
vardecls1a.chpl:9: error: 'x' used before defined (first used here)
